# SeaTrace-ODOO

./: .gitattributes  .gitignore  .gitleaks-seatrace.toml  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE_VALIDATION_AND_NEXT_STEPS.md  COACH_FINAL_SUMMARY.md  CODE.AGENT.md  CODEX_TASK_LIST.md  COMMIT_READY.md  COMMONS_INTEGRATION_MASTER_PLAN.md  COPILOT_SUMMARY_FOR_REVIEW.md  DEPLOY_TO_SEATRACE_NOW.md  DEVSHELL_ENGINEERING_PLAN.md  DEVSHELL_QUICKSTART.md  DOCUMENTATION_INDEX.md  DONT_FORGET_TO_COMMIT.md  FINAL_ANALYSIS.md  FINAL_INTEGRATION_SUMMARY.md  HOUSEKEEPING_PLAN.md  INFRASTRUCTURE_SSL_FIX.md  LICENSE  LICENSE.limited  LICENSE.unlimited  MASTER_TERMINAL_SUMMARY.md  Makefile  Move-DeckSide-To-Private.ps1  PACKET_SWITCHING_INTEGRATION.md  PHASE_1.5A_IMPLEMENTATION_SUMMARY.md  POSTMAN_WORKFLOW_GUIDE.md  PRACTICE_GAMEBOOK.md  PROCEEDING_MASTER_INTEGRATION.md  PROJECT.AGENT.md  PROJECT_MANIFEST.json  PR_COMMONS_GOOD_INFRASTRUCTURE.md  PR_MODULAR_STAGE_1.md  QUICK_START_COMMONS_INTEGRATION.md  README.md  READY_FOR_SEQUENTIAL_RUNS.md  READY_TO_EXECUTE.md  (+23 more)
.ai/: assistant_context.json
.copilot-handoff/: GENERATION_REQUEST.md
.github/: CODEOWNERS  copilot-instructions.md  embedding-requirements.txt  pull_request_template.md
contracts/: packet.proto
docs/: ACCESS_CONTROL_FAQ.md  BUSINESS_MODEL_ECONOMICS.md  COMMONS_CHARTER.md  CRYPTO_QUICK_START.md  DEMO_GUIDE.md  KEY_MANAGEMENT_ARCHITECTURE.md  ODOO_HOOKS_QUICK_START.md  PACKET_SWITCHING_ARCHITECTURE.md  PROCEEDING_TEAM_DISCOVERIES.md  PR_COMBINED_WORK.md  PUBLIC_PRIVATE_KEY_DEVELOPMENT_GUIDE.md  (+4 more)
src/: app.py  (+5 more)
(+201 files in other folders)
