[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seatrace-odoo"
version = "1.0.0"
description = "Blockchain-powered seafood supply chain with dual licensing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "World Sea Food Producers Association", email = "info@worldseafoodproducers.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "structlog>=23.0.0",
    "pynacl>=1.5.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.1",         # Async Redis client for Bloom CRL & rate limiting
    "pybloom-live>=4.0.0",  # Bloom filter for 10,000x faster CRL checks
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
